@@ -1,5 +1,11 @@
 0.22.9	UNRELEASED
 
+ * Add ``unpack-objects`` plumbing command to unpack objects from pack files
+   into loose objects in the repository. This command extracts all objects
+   from a pack file and writes them to the object store as individual files.
+   Available in both ``dulwich.porcelain.unpack_objects()`` and as a CLI
+   command ``dulwich unpack-objects``. (Jelmer Vernooĳ)
+
  * Add support for pack index format version 3. This format supports variable
    hash sizes to enable future SHA-256 support. The implementation includes
    reading and writing v3 indexes with proper hash algorithm identification
